--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
     "name": "wordcount",
     "main": "./lib/wordcount",
     "version": "0.0.0",
-    "description": "A short description of your package",
+    "description": "Wordcount plugin tutorial",
     "keywords": [],
     "repository": "https://github.com/fredluetkemeier/inkdrop-test-plugin",
     "license": "MIT",
     "engines": {
-        "inkdrop": "^5.3.1"
+        "inkdrop": "^5.x"
     },
     "dependencies": {}
 }
